[JENKINS-41740] fix "text not wrapping" bug in IE11

--- a/blueocean-dashboard/src/main/less/placeholder.less
+++ b/blueocean-dashboard/src/main/less/placeholder.less
@@ -23,6 +23,7 @@
 
     .title, .message {
         text-align: center;
+        align-self: stretch; // ensure text wraps in IE11
     }
 
     .icon, .title, .message {
